--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.11.2",
     "com.unity.netcode.gameobjects": "1.12.2",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.services.lobby": "1.2.2",
     "com.unity.services.matchmaker": "1.1.5",
     "com.unity.services.multiplay": "1.2.5",
